# jravis-brain

./: .env.template  .replit  .replit.bak  Dashboard.jsx  DashboardPage.jsx  Dockerfile  Dockerfile.bak  HeaderBar.tsx  Health Monitor Widget· typescript  HealthMonitorWidget.tsx  IncomeInsightsCard.tsx  IncomeSummaryWidget.tsx  JRAVIS_Verification.txt  LockScreen.js  Mission2040 Jravis Vabot Intelligence Script.py  Mission2040_JRAVIS_VABot_Intelligence_Script.py  PhaseOverviewWidget.tsx  Procfile  README.md  ReportTrackerWidget.tsx  SidebarNav.tsx  SystemActivityWidget.tsx  approval_dashboard.py  approvals.jsonl  auto_backup_cloud.py  auto_dashboard_trigger.py  auto_dashboard_weekly.py  auto_key_worker.py  auto_push.py  backend.Dockerfile  brain_engine.py  cleanup.sh  connectors_printify_connectorv3.py  connectors_printify_connectorv3_graphql.py  daily_cycle_cloud.py  dashboard_app.py  dashboard_core.py  dashboard_live_feed.js  dashboard_live_feed_secure.js  db.py  (+112 more)
.next/: trace
Connectors/: connectors_printify_connector.py  connectors_printify_connectorv3.py  printify_connector.py
_old_code/: old_bundle.py
backend/: Dockerfile  app.py  requirements.txt
brain/: Dockerfile  jravis_brain.py
components/: LiveFeedConnector.jsx  LiveFeedPanel.jsx
config/: phase1_config.json  phase_automation.yaml
connectors/: gumroad.py  income_bridge.py  jravis_store.py  paypal_connector.py  printify.py  printify_connector.py  shopify.py
jravi_daily_report/: daily_report_worker.py
jravis-backend/: Dockerfile  main.py  render.yaml  requirements.txt  send_report.py
(+79 files in other folders)
