[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.1",
    "fpdf>=1.7.2",
    "pandas>=2.3.3",
    "pdfkit>=1.0.0",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "schedule>=1.2.2",
]
